--- a/integrantes.html
+++ b/integrantes.html
@@ -24,11 +24,11 @@
   <main>
     <section>
       <h2>Membros do:</h2>
-      <img src="/img/logomarcaCBJR.png" alt="Logomarca Charlie Brown Jr." class="logomarca">
+      <img src="img/logomarcaCBJR.png" alt="Logomarca Charlie Brown Jr." class="logomarca">
 
 
       <div class="integrante">
-        <img src="/img/choraolove.jpeg" alt="Chorão, vocalista da banda" class="banda-img">
+        <img src="img/choraolove.jpeg" alt="Chorão, vocalista da banda" class="banda-img">
         <h2>Chorão (Alexandre Magno Abrão): </h2>
             <p>Vocalista e principal letrista da banda desde a sua formação, em 1992, até seu falecimento em março de 2013, que marcou o fim do Charlie Brown Jr.</p>
         
