--- a/integrantes.html
+++ b/integrantes.html
@@ -23,44 +23,57 @@
 
   <main>
     <section>
-      <h2>Membros do:</h2>
+      <h2>Membros da Formação Clássica</h2>
       <img src="img/logomarcaCBJR.png" alt="Logomarca Charlie Brown Jr." class="logomarca">
 
       <div class="integrante">
-        <img src="img/choraolove.jpeg" alt="Chorão, vocalista da banda" class="banda-img">
-        <h2>Chorão (Alexandre Magno Abrão): </h2>
-        <p>Vocalista e principal letrista da banda desde a sua formação, em 1992, até seu falecimento em março de 2013, que marcou o fim do Charlie Brown Jr.</p>
+        <img src="img/choraolove.jpeg" alt="Chorão" class="banda-img">
+        <h2>Chorão (Alexandre Magno Abrão)</h2>
+        <p>Vocalista e principal letrista da banda desde a formação, em 1992, até seu falecimento em 2013.</p>
       </div>
 
       <div class="integrante">
-        <img src="img/champignon.jpeg" alt="Champignon, baixista da banda" class="banda-img">
+        <img src="img/champignon.jpeg" alt="Champignon" class="banda-img">
         <h2>Champignon (Luiz Carlos Leão Duarte Júnior)</h2>
-        <p>Baixista e backing vocal. Reconhecido pelo seu beat box de estilo único.</p>     
+        <p>Baixista e backing vocal. Reconhecido pelo seu beat box de estilo único.</p>
+      </div>
 
-        <img src="img/marcao.jpeg" alt="Marcão, guitarrista da banda" class="banda-img">
-        <h2>Marcão Britto (Marco Antônio Valentim Britto)</h2>
+      <div class="integrante">
+        <img src="img/marcao.jpeg" alt="Marcão" class="banda-img">
+        <h2>Marcão Britto</h2>
         <p>Guitarrista e letrista.</p>
+      </div>
 
-        <img src="img/thiagocastanho.jpeg" alt="Thiago, guitarrista da banda" class="banda-img">
+      <div class="integrante">
+        <img src="img/thiagocastanho.jpeg" alt="Thiago Castanho" class="banda-img">
         <h2>Thiago Castanho</h2>
-        <p>Guitarrista e letrista. Fez parte da formação original, de 1992 a 2001. Retornou em 2005 e permaneceu até o fim da banda em 2013.</p>
+        <p>Guitarrista e letrista. Fez parte da formação original, de 1992 a 2001. Retornou em 2005 e permaneceu até 2013.</p>
+      </div>
 
-        <img src="img/renato.jpeg" alt="Renato, baterista da banda" class="banda-img">
+      <div class="integrante">
+        <img src="img/renato.jpeg" alt="Renato Pelado" class="banda-img">
         <h2>Renato Pelado (Renato da Silva Cunha)</h2>
-        <p>Baterista. Foi um dos fundadores, tocando na banda de 1992 a 2005.</p>
+        <p>Baterista. Um dos fundadores, tocou de 1992 a 2005.</p>
+      </div>
 
-        <img src="img/heitor.jpeg" alt="Heitor, baixista da banda" class="banda-img">
+      <div class="integrante">
+        <img src="img/heitor.jpeg" alt="Heitor Gomes" class="banda-img">
         <h2>Heitor Gomes</h2>
-        <p>Baixista. Entrou na banda em 2005 após a saída de Champignon e permaneceu até 2011, quando Champignon retornou.</p>
+        <p>Baixista. Entrou em 2005 após a saída de Champignon e permaneceu até 2011.</p>
+      </div>
 
-        <img src="img/bruno.jpeg" alt="Bruno Graveto, baterista da banda" class="banda-img"> 
-        <h2>Bruno Graveto</h2> 
+      <div class="integrante">
+        <img src="img/bruno.jpeg" alt="Bruno Graveto" class="banda-img">
+        <h2>Bruno Graveto</h2>
         <p>Baterista. Assumiu a bateria em 2008 e permaneceu até o fim da banda em 2013.</p>
+      </div>
 
-        <img src="img/pinguim.jpeg" alt="Pinguim, baterista da banda" class="banda-img"> 
-        <h2>Pinguim (André Pinguim Ruas)</h2> 
+      <div class="integrante">
+        <img src="img/pinguim.jpeg" alt="Pinguim" class="banda-img">
+        <h2>Pinguim (André Pinguim Ruas)</h2>
         <p>Baterista. Entrou em 2005 e ficou até 2008.</p>
       </div>
+
     </section>
   </main>
 
@@ -70,4 +83,5 @@
 
 </body>
 </html>
+
 
