--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main>
     <section>
       <h2>Sobre a Banda</h2>
-      <img src="/img/charliebrownjr.jpeg" alt="Foto da banda Charlie Brown Jr." class="banda-img">
+      <img src="img/charliebrownjr.jpeg" alt="Foto da banda Charlie Brown Jr." class="banda-img">
       <p>
         Charlie Brown Jr. foi uma banda de rock brasileira de grande sucesso, fundada em Santos em 1992 por Chorão. Misturava rock, rap, reggae, hardcore e skate punk. Suas letras falam sobre juventude, crítica social, sentimentos e superação. As letras de Chorão eram inconfundiveis: diretas, conversacionais, cheias de gírias, relacionamentos amorosos, reflexões pessoais, fazendo as músicas parecerem um papo entre amigos e principamente <strong>atemporais.</strong>        
       </p>
