--- a/discografia.html
+++ b/discografia.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Discografia da banda Charlie Brown Jr. com HTML5">
+ <link rel="icon" href="img/faviconlogo.png" type="image/png">
   <title>Discografia - Charlie Brown Jr.</title>
   <link rel="stylesheet" href="style.css">
 </head>
