--- a/contato.html
+++ b/contato.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Formulário de contato para fãs de Charlie Brown Jr.">
+  <link rel="icon" href="img/faviconlogo.png" type="image/png">
   <title>Contato - Charlie Brown Jr.</title>
   <link rel="stylesheet" href="style.css" />
 </head>
