--- a/integrantes.html
+++ b/integrantes.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Integrantes da banda Charlie Brown Jr.">
+  <link rel="icon" href="img/faviconlogo.png" type="image/png">
   <title>Integrantes - Charlie Brown Jr.</title>
   <link rel="stylesheet" href="style.css">
 </head>
