--- a/integrantes.html
+++ b/integrantes.html
@@ -24,9 +24,8 @@
 
   <main>
     <section>
-      <h2>Membros da Formação Clássica</h2>
-      <img src="img/logomarcaCBJR.png" alt="Logomarca Charlie Brown Jr." class="logomarca">
-
+      <h1>Os Membros da Banda</h1>
+      
       <div class="integrante">
         <img src="img/choraolove.jpeg" alt="Chorão" class="banda-img">
         <h2>Chorão (Alexandre Magno Abrão)</h2>
